		Added support for native alert dialogs in OSX Quartz.
		Clang warning fixes.
		Added missing config.guess and config.sub.
		Allow drag of .gtkw (when viewer still does not have a file
		loaded) to load the corresponding dump file.
		Fix MinGW compiles broken from recent changes.
		Documentation updates.
		Fixed broken ifdef in signalwindow.c that degated savefile
		loading .gtkw dump+save properly if not gconf2 or Mac.
3.3.32 13feb12	Turn off loader messages when Tcl is executing a command.
		Added gtk_print_unix_dialog support for printing to
		real printers by using the "UNIX" type.
		Automatically kill splash screen on reload/new tab.
		Added transaction_args savefile tag and support for passing
		args to transaction filters via the args $comment.
		Added string value of \000 which renders as high-z.
		Integrated alt_wheel_mode code provided by Tom Browne.
		Fixes for some rc file variables to keep them from getting 
		clobbered on 2nd tab opening.
		Warning fixes when compiled on Ubuntu.
3.3.33 27feb12	Scan-build fix in vcd_recoder.c.
		Added $timezero tag to VCD files which allows offsetting all
		the values in a trace to provide ability for negative time 
		values.  Currently only VCD, LXT, LXT2, VZT, and FST support 
		this.
		Fix for timescale 10s and 100s.
3.3.34 12mar12	Fix for marker time deltas when $timezero is used.
		Reduced size of alert requester icons to 64x64 pixels.
3.3.35 15mar12	Polarity fix for vcd_preserve_glitches in rcfile.  Default 
		is no/off. Use yes in the rcfile to enable (e.g., for
		viewing interpolated analog waveforms).
		Added vcd_preserve_glitches support to FST as --optimize
		uses FST.
		Added vcd_preserve_glitches_real (for VCD/FST) rcfile
		variable that turns off deglitching only for real signals.
		This removes the need for #define TRACK_AND_HOLD_FIX and 
		prevents the case where interpolation of an analog waveform
		is deformed as significant data points were removed by the
		VCD or FST loader.